0021802: Not all names are transferred from STEP to IGES via XDE

Method IGESCAFControl_Writer::WriteNames now iterates over all nested assemblies and collects names for shapes.
Regression fix
Test-case for issue #21802